# learn-ai-act-2

./: README.md  calibration.ipynb  requirements.txt  scratch.ipynb
learn-cuda/cuda-ext-tutorial/: lltm-cpp.ipynb  lltm-python.ipynb
learn-llm/: pgvector_demo.ipynb  scratch.ipynb
learn-llm/.cache/41/: cache.db
learn-llm/Code/: batchnorm_layernorm.ipynb  domain-adaptation.ipynb  finetuning.ipynb  llama2.ipynb  misc.ipynb  rag.ipynb  summarize_dialog.ipynb
learn-llm/Coursera - GenAI with LLMs/: Copy_Lab_1.ipynb  Lab_1_summarize_dialogue.ipynb  Lab_2_fine_tune_generative_ai_model.ipynb  README.txt
learn-llm/Notes/: README.txt
learn-llm/karpathy-nlp-lectures/: learn-ai.code-workspace
learn-llm/learn-autogen/: main.py  quickstart.ipynb  tp.py
learn-llm/learn-huggingface/: finetuning_tutorial.ipynb  learn-gradio.ipynb  semantic_search.ipynb
learn-llm/learn-langchain/: agent-quickstart.ipynb  langsmith-demo.ipynb  quickstart-1.ipynb  quickstart-2.ipynb  quickstart-3.ipynb  rag-qa.ipynb
learn-llm/learn-openai/: quickstart-functions.ipynb  quickstart.ipynb
learn-llm/learn-pinecone/: quickstart-1.ipynb  quickstart.ipynb
learn-llm/llm-utils/: examples.ipynb  setup.cfg
learn-llm/llm-utils/llm_utils/: md.py  models.py
learn-llm/multimodal-rag/: 1_create_embs.ipynb  2_store_embs.ipynb  3_retrieval.ipynb
learn-rl/: grid_world.py  recording_demo.py
learn-torcheval/: dist_minst.py  docker_rank_0.env  docker_rank_1.env  single_mnist.py
learn-torchsnapshot/: notes.md  restore.py  save.py
learn-torchtnt/: notes.md  simple.py
mnist/: dataset.py  model.py
(+61 files in other folders)
