[metadata]
name = avilabs_llm_utils
version = 0.0.1
author = Avilay Parekh
author_email = avilay@gmail.com
description = A bunch of convenience color print functions.
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    markdown
    beautifulsoup4
